[package]
name = "actix-files"
version = "0.6.0-beta.8"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Static file serving for Actix Web"
keywords = ["actix", "http", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web"
categories = ["asynchronous", "web-programming::http-server"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_files"
path = "src/lib.rs"

[dependencies]
actix-web = { path = "../", default-features = false }
actix-http = { path = "../actix-http" }
actix-service = { git = "https://github.com/brockelmore/actix-net", branch = "brock/full_fork" }
actix-utils = { git = "https://github.com/brockelmore/actix-net", branch = "brock/full_fork" }

askama_escape = "0.10"
bitflags = "1"
bytes = "1"
futures-core = { version = "0.3.7", default-features = false, features = ["alloc"] }
http-range = "0.1.4"
derive_more = "0.99.5"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.1"
percent-encoding = "2.1"

[dev-dependencies]
actix-rt = { git = "https://github.com/brockelmore/actix-net", branch = "brock/full_fork" }
actix-web = { path = "../" }
actix-test = { path = "../actix-test" }
