[package]
name = "actix-web-codegen"
version = "0.5.0-beta.5"
description = "Routing and runtime macros for Actix Web"
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full", "parsing"] }
proc-macro2 = "1"
actix-router = { path = "../actix-router" }

[dev-dependencies]
actix-rt = { git = "https://github.com/brockelmore/actix-net", branch = "brock/full_fork" }
actix-macros = { git = "https://github.com/brockelmore/actix-net", branch = "brock/full_fork" }
actix-test = { path = "../actix-test" }
actix-utils = { git = "https://github.com/brockelmore/actix-net", branch = "brock/full_fork" }
actix-web = { path = "../" }

futures-core = { version = "0.3.7", default-features = false, features = ["alloc"] }
trybuild = "1"
rustversion = "1"
